--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,8 @@ services:
       #- "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro  # Mount SSL certificates
+      - ./landing/dist:/usr/share/nginx/html:ro # Mount dist directory as static files
+      - ./nginx/error:/usr/share/nginx/html/error:ro # Optional error pages
     depends_on:
       - n8n
       - landing
@@ -42,10 +43,9 @@ services:
       context: ./landing
       dockerfile: Dockerfile
     command: npx serve -s dist
-    ports:
-      - "3000:3000"
     environment:
       - NODE_ENV=production
+      - PORT=3000
     networks:
       - app-network
 
