--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,329 +4,91 @@ worker_processes  auto;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
-# Optimize worker connections
 events {
     worker_connections  1024;
     multi_accept on;
-    use epoll;
 }
 
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    # Optimized logging format
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for" '
-                      '$request_time $upstream_response_time $pipe';
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main buffer=16k flush=10s;
+    access_log  /var/log/nginx/access.log  main;
 
-    # File optimizations
     sendfile        on;
     tcp_nopush      on;
     tcp_nodelay     on;
-    
-    # Connection timeouts
     keepalive_timeout  65;
-    keepalive_requests 100;
-    client_body_timeout 10;
-    client_header_timeout 10;
-    send_timeout 10;
-    
-    # Buffer size optimizations
-    client_max_body_size 10m;
-    client_body_buffer_size 128k;
-    client_header_buffer_size 1k;
-    large_client_header_buffers 4 4k;
-    output_buffers 1 32k;
-    postpone_output 1460;
     
     # Compression settings
-    gzip on;
-    gzip_comp_level 5;
-    gzip_min_length 256;
-    gzip_proxied any;
-    gzip_vary on;
-    gzip_types
-        application/atom+xml
-        application/javascript
-        application/json
-        application/ld+json
-        application/manifest+json
-        application/rss+xml
-        application/vnd.geo+json
-        application/vnd.ms-fontobject
-        application/x-font-ttf
-        application/x-web-app-manifest+json
-        application/xhtml+xml
-        application/xml
-        font/opentype
-        image/bmp
-        image/svg+xml
-        image/x-icon
-        text/cache-manifest
-        text/css
-        text/plain
-        text/vcard
-        text/vnd.rim.location.xloc
-        text/vtt
-        text/x-component
-        text/x-cross-domain-policy;
-    
-    # File cache settings
-    open_file_cache max=1000 inactive=20s;
-    open_file_cache_valid 30s;
-    open_file_cache_min_uses 2;
-    open_file_cache_errors on;
+    gzip  on;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # Custom error pages
-    error_page 400 /error/400.html;
-    error_page 401 /error/401.html;
-    error_page 403 /error/403.html;
-    error_page 404 /error/404.html;
-    error_page 405 /error/405.html;
-    error_page 406 /error/406.html;
-    error_page 408 /error/408.html;
-    error_page 413 /error/413.html;
-    error_page 414 /error/414.html;
-    error_page 415 /error/415.html;
-    error_page 429 /error/429.html;
-    error_page 500 502 503 504 /error/50x.html;
-
-    # Map directive for X-Forwarded-Proto - moved from server block to http context
-    map $http_x_forwarded_proto $proxy_x_forwarded_proto {
-        default $http_x_forwarded_proto;
-        ''      $scheme;
-    }
-
-    # Rate limiting zones
-    limit_req_zone $binary_remote_addr zone=global_limit:10m rate=30r/s;
-    limit_req_zone $binary_remote_addr zone=n8n_limit:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=wp_login:10m rate=5r/m;
-
-    # Default server block to handle invalid domains
+    # Main server configuration - this will be the default
     server {
         listen 80 default_server;
-        server_name _;
+        server_name _;  # This matches any hostname
         
-        # Location for custom error pages
-        location ^~ /error/ {
-            internal;
-            root /usr/share/nginx/html;
-            try_files $uri =404;
-        }
-        
-        # Default custom error page for all errors when no specific error page exists
-        location = /error/default.html {
-            internal;
-            root /usr/share/nginx/html;
-        }
-        
-        # Return a specific status code instead of serving default server content
-        location / {
-            return 444; # Closes the connection without sending a response
-        }
-    }
+        # Basic security headers
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Content-Type-Options "nosniff";
 
-    # Main server configuration
-    server {
-        listen 80;
-        server_name akane.production www.akane.production;
-        
-        # Real IP settings for load balancer
-        # set_real_ip_from 10.0.0.0/8;  # Replace with your load balancer's IP range
-        # set_real_ip_from 172.16.0.0/12;  # Replace with your load balancer's IP range
-        # set_real_ip_from 192.168.0.0/16;  # Replace with your load balancer's IP range
-        # real_ip_header X-Forwarded-For;
-        # real_ip_recursive on;
-        
-        # Security headers - assuming SSL is terminated at load balancer
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'; frame-ancestors 'self';" always;
-        # Note: HSTS should be set at load balancer level
-        add_header Permissions-Policy "camera=(), microphone=(), geolocation=(), interest-cohort=()" always;
-        
-        # Optimize website SEO
-        add_header X-Robots-Tag "index, follow" always;
-        
-        # Custom error pages location
-        location ^~ /error/ {
-            internal;
-            alias /usr/share/nginx/html/error/;
-            try_files $uri =404;
-        }
-        
-        # Root redirect
-        location = / {
-            proxy_pass http://landing:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
-            
-            # Add caching headers for better performance
-            add_header Cache-Control "public, max-age=3600";
-            expires 1h;
-            
-            # Custom error handling
-            proxy_intercept_errors on;
-        }
-        
-        # Landing page
+        # Root directory for static files
+        root /usr/share/nginx/html;
+
+        # Landing page (main application)
         location / {
-            proxy_pass http://landing:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
-            
-            # Performance optimizations
-            proxy_buffering on;
-            proxy_buffer_size 16k;
-            proxy_busy_buffers_size 24k;
-            proxy_buffers 64 4k;
-            
-            # Enable error interception to use custom error pages
-            proxy_intercept_errors on;
-            
-            # Cache static content
-            location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
-                expires 7d;
-                add_header Cache-Control "public, max-age=604800, immutable";
-                access_log off;
-                log_not_found off;
-                try_files $uri @landing;
-                
-                # Error handling for static files
-                error_page 404 = @landing;
-            }
-            
-            # Preload key resources
-            add_header Link "</styles.css>; rel=preload; as=style, </main.js>; rel=preload; as=script";
+            # First try to serve static files directly from nginx
+            try_files $uri $uri/ @landing;
         }
-        
+
+        # Proxy to the landing page service
         location @landing {
             proxy_pass http://landing:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
-            
-            # Enable error interception
-            proxy_intercept_errors on;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # n8n with security
+        # n8n service
         location /n8n/ {
-            # Restrict access to internal networks or specific IPs
-            # allow 10.0.0.0/8;
-            # allow 127.0.0.1;
-            # deny all;
-            
             proxy_pass http://n8n:5678/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # WebSocket support
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             
-            # Increase timeout for long-running workflows
             proxy_read_timeout 120s;
-            proxy_connect_timeout 120s;
-            proxy_send_timeout 120s;
-            
-            # Disable caching
-            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
-            expires off;
-            
-            # Custom error handling
-            proxy_intercept_errors on;
-            
-            # Handle 502 Bad Gateway errors specifically for n8n
-            error_page 502 /error/n8n-unavailable.html;
-            
-            # Handle rate limiting
-            limit_req zone=n8n_limit burst=20 nodelay;
-        }
-
-        # WordPress optimized
-        # location /wp/ {
-        #     proxy_pass http://wordpress:80/;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
-        #     
-        #     # Custom error handling
-        #     proxy_intercept_errors on;
-        #     
-        #     # Security for WordPress
-        #     location ~* /wp-admin/|/wp-login.php {
-        #         # Uncomment to restrict by IP
-        #         # allow 10.0.0.0/8;
-        #         # allow 127.0.0.1;
-        #         # deny all;
-        #         
-        #         proxy_pass http://wordpress:80;
-        #         proxy_set_header Host $host;
-        #         proxy_set_header X-Real-IP $remote_addr;
-        #         proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
-        #         
-        #         # Rate limiting for login attempts
-        #         limit_req zone=wp_login burst=5 nodelay;
-        #     }
-        #     
-        #     # Optimize WordPress static content
-        #     location ~* ^/wp.+\.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
-        #         expires 7d;
-        #         add_header Cache-Control "public, max-age=604800, immutable";
-        #         access_log off;
-        #         log_not_found off;
-        #         proxy_pass http://wordpress:80;
-        #         
-        #         # For static asset errors, return default content from WordPress
-        #         error_page 404 = @wordpress_fallback;
-        #     }
-            
-        # Deny access to sensitive WordPress files
-        location ~* \.(htaccess|htpasswd|ini|log|sh|inc|bak|git|svn)$ {
-            deny all;
-            error_page 403 /error/403.html;
         }
         
-        # Protect WordPress xmlrpc.php
-        location ~* /xmlrpc.php$ {
-            deny all;
-            error_page 403 /error/403.html;
+        # API endpoints
+        location /api/ {
+            proxy_pass http://landing:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
-        
-        # Handle WordPress fallback
-        # location @wordpress_fallback {
-        #     proxy_pass http://wordpress:80/;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
-        # }
 
-        # Deny access to hidden files
-        location ~ /\. {
-            deny all;
+        # Optimize static content caching
+        location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+            expires 7d;
+            add_header Cache-Control "public, max-age=604800";
             access_log off;
-            log_not_found off;
-            error_page 403 /error/403.html;
+            try_files $uri =404;
         }
-
-        # Apply global rate limiting to prevent DDoS
-        limit_req zone=global_limit burst=50 nodelay;
-        
-        # Enable request limiting status codes
-        limit_req_status 429;
         
         # Health check
         location /health {
@@ -334,40 +96,20 @@ http {
             return 200 "healthy\n";
         }
         
-        # Default favicon handling
-        location = /favicon.ico {
-            access_log off;
-            log_not_found off;
-            try_files $uri =404;
-        }
-        
         # robots.txt
         location = /robots.txt {
             add_header Content-Type text/plain;
-            return 200 "User-agent: *\nDisallow: /n8n/\nDisallow: /wp/wp-admin/\nDisallow: /wp/wp-includes/\nAllow: /\nSitemap: https://akane.production/sitemap.xml\n";
+            return 200 "User-agent: *\nDisallow: /n8n/\nAllow: /\n";
         }
         
-        # Handle 404 Not Found errors for the entire server
-        location @not_found {
-            return 404;
+        # Favicon handling
+        location = /favicon.ico {
+            access_log off;
+            log_not_found off;
         }
         
-        # Custom 50x error page for API requests
-        location = /api/error {
-            default_type application/json;
-            return 500 '{"error": "Internal Server Error", "message": "An unexpected error occurred while processing your request"}';
-        }
-        
-        # Handle API errors differently (return JSON instead of HTML)
-        location /api/ {
-            proxy_pass http://landing:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
-            
-            # Custom error handling for API
-            proxy_intercept_errors on;
-            error_page 400 401 403 404 429 500 502 503 504 = /api/error;
-        }
+        # Error pages
+        error_page 404 /404.html;
+        error_page 500 502 503 504 /50x.html;
     }
 }
