--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,4 @@
-# Main docker-compose file that orchestrates all services
-version: '3.8'
-
 services:
-  # n8n automation service
   n8n:
     image: n8nio/n8n:latest
     restart: unless-stopped
@@ -20,14 +16,7 @@ services:
       - n8n_data:/home/node/.n8n
     networks:
       - app-network
-    healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:5678/healthz"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 20s
 
-  # Nginx service to route traffic
   nginx:
     image: nginx:alpine
     restart: unless-stopped
@@ -37,17 +26,10 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - dist_data:/usr/share/nginx/html:ro
     depends_on:
-      landing:
-        condition: service_healthy
+      - landing
     networks:
       - app-network
-    healthcheck:
-      test: ["CMD", "nginx", "-t"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
-  # Combined landing page service for production
   landing:
     build:
       context: ./landing
@@ -63,12 +45,6 @@ services:
       - dist_data:/app/dist:ro
     networks:
       - app-network
-    healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:3000/api/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 15s
 
 networks:
   app-network:
