--- a/landing/Dockerfile
+++ b/landing/Dockerfile
@@ -2,6 +2,12 @@ FROM node:18-alpine
 
 WORKDIR /app
 
+# Set environment variables
+ENV NODE_ENV=${NODE_ENV}
+ENV TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
+ENV TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
+ENV PORT=3000
+
 COPY package*.json ./
 
 RUN npm install
@@ -13,5 +19,9 @@ RUN npm run build
 
 EXPOSE 3000
 
-# The default command will be overridden by docker compose
-CMD ["npm", "run", "dev"]
+# Use different commands based on NODE_ENV
+CMD if [ "$NODE_ENV" = "production" ]; then \
+    npm start; \
+    else \
+    npm run dev; \
+    fi
